# Appster

./: CMakeLists.txt  LICENSE  README.md  example.txt
cmake/: FindHiredis.cmake  Findlibdill.cmake  Findlibuv.cmake
src/: appster.c  appster.h  appster_struct.h  channel.c  channel.h  crypto.c  crypto.h  evbuffer.h  format.c  format.h  hashmap.h  http_parser.h  log.c  log.h  main.c  redis.c  schema.c  schema.h  shema.c  shema.h  vector.c
src/examples/: body.c  read.c  redis.c  sql.c  write.c
src/module/: redis.c  redis.h  sql.c  sql.h
